Initializing action as parameter